<resources>
    <string name="app_name">CryptoCurrencyTracker</string>
    <string name="currency">currency</string>
    <string name="_10_000">10</string>
    <string name="_24h">24h:</string>
    <string name="value">value</string>
    <string name="name">name</string>
    <string name="BTC">BTC</string>
    <string name="Bitcoin">Bitcoin</string>
    <string name="dollar">$</string>
    <string name="percent">%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">create account</string>
    <string name="login">login</string>
    <string name="do_you_already_have_account">Do you already have account?</string>
    <string name="enter_email_msg">Please enter email</string>
    <string name="enter_password_msg">Please enter password</string>
    <string name="successfull_registration">You are registered successfully</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="favorites">Favorites</string>
    <string name="market">Market</string>
    <string name="home">Home</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_1m">1m</string>
    <string name="_1w">1w</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="name_surname">Name Surname</string>
    <string name="tim_gmail_com">tim@gmail.com</string>
    <string name="pick_a_strong_password">Pick a strong password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
</resources>